Implement #covered function for Board.

--- a/spec/runner.html
+++ b/spec/runner.html
@@ -11,6 +11,7 @@
 
   <script type="text/javascript" src="../spec/board_spec.js"></script>
 
+  <script type="text/javascript" src="../lib/underscore/underscore.js"></script>
   <script type="text/javascript" src="../tictactoe/board.js"></script>
 
   <script type="text/javascript">
