--- a/spec/runner.html
+++ b/spec/runner.html
@@ -6,13 +6,20 @@
 
   <link rel="shortcut icon" type="image/png" href="../lib/jasmine/jasmine_favicon.png">
   <link rel="stylesheet" type="text/css" href="../lib/jasmine/jasmine.css">
+
+  <script type="text/javascript" src="../lib/jquery/jquery.js"></script>
+
   <script type="text/javascript" src="../lib/jasmine/jasmine.js"></script>
   <script type="text/javascript" src="../lib/jasmine/jasmine-html.js"></script>
+  <script type="text/javascript" src="../lib/jasmine-jquery/jasmine-jquery.js"></script>
 
+  <script type="text/javascript" src="../spec/spec_helper.js"></script>
   <script type="text/javascript" src="../spec/board_spec.js"></script>
+  <script type="text/javascript" src="../spec/game_spec.js"></script>
 
   <script type="text/javascript" src="../lib/underscore/underscore.js"></script>
   <script type="text/javascript" src="../tictactoe/board.js"></script>
+  <script type="text/javascript" src="../tictactoe/game.js"></script>
 
   <script type="text/javascript">
     (function() {
