Move tictactoe dir to lib. Move styles to index file.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
 
     <script type="text/javascript" src="lib/jquery/jquery.js"></script>
     <script type="text/javascript" src="lib/underscore/underscore.js"></script>
-    <script type="text/javascript" src="tictactoe/game.js"></script>
+    <script type="text/javascript" src="lib/tictactoe/game.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="tictactoe/stylesheet.css">
+    <style type="text/css">
+      #board td {
+        font-family: helvetica;
+        font-size: 60px;
+        text-align: center;
+        background-color: #e3e3e3;
+        width: 150px;
+        height: 150px;
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
 
