--- a/spec/runner.html
+++ b/spec/runner.html
@@ -18,8 +18,8 @@
   <script type="text/javascript" src="../spec/game_spec.js"></script>
 
   <script type="text/javascript" src="../lib/underscore/underscore.js"></script>
-  <script type="text/javascript" src="../tictactoe/board.js"></script>
-  <script type="text/javascript" src="../tictactoe/game.js"></script>
+  <script type="text/javascript" src="../lib/tictactoe/board.js"></script>
+  <script type="text/javascript" src="../lib/tictactoe/game.js"></script>
 
   <script type="text/javascript">
     (function() {
