--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     </table>
 
     <script type="text/javascript">
-      var game = new Game($('#board'));
+      var game = new Game();
+      game.play($('#board'));
     </script>
 
   </body>
