--- a/index.html
+++ b/index.html
@@ -22,27 +22,29 @@
   </head>
   <body>
 
-    <table id="board">
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </table>
+    <script type="text/template" id="board-template">
+      <table id="board">
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
+    </script>
 
     <script type="text/javascript">
       var game = new Game();
-      game.play($('#board'));
+      game.play();
     </script>
 
   </body>
