--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="lib/jquery/jquery.js"></script>
     <script type="text/javascript" src="lib/underscore/underscore.js"></script>
     <script type="text/javascript" src="lib/tictactoe/board.js"></script>
+    <script type="text/javascript" src="lib/tictactoe/opponent.js"></script>
     <script type="text/javascript" src="lib/tictactoe/game.js"></script>
 
     <style type="text/css">
