--- a/index.html
+++ b/index.html
@@ -7,11 +7,50 @@
     <script type="text/javascript" src="lib/underscore/underscore.js"></script>
     <script type="text/javascript" src="lib/tictactoe/board.js"></script>
     <script type="text/javascript" src="lib/tictactoe/opponent.js"></script>
+    <script type="text/javascript" src="lib/tictactoe/referee.js"></script>
     <script type="text/javascript" src="lib/tictactoe/game.js"></script>
 
     <style type="text/css">
-      #board td {
+      body {
         font-family: helvetica;
+      }
+
+      #message {
+        display: none;
+        position: absolute;
+        color: white;
+        text-align: center;
+        background-color: rgba(0, 0, 0, 0.8);
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+      }
+
+      #message p {
+        font-size: 30px;
+        line-height: 80px;
+        margin: 0 0 10px 0;
+      }
+
+      #message a#reset-button {
+        background-color: #019ad2;
+        padding: 8px 26px;
+        font-size: 18px;
+        border-radius: 4px;
+        color: white;
+        text-decoration: none;
+      }
+
+      #message a#reset-button:hover {
+        background-color: #00aeee;
+      }
+
+      #board {
+        margin: 80px auto 0 auto;
+      }
+
+      #board td {
         font-size: 60px;
         text-align: center;
         background-color: #e3e3e3;
@@ -22,6 +61,10 @@
     </style>
   </head>
   <body>
+    <div id="message">
+      <p></p>
+      <a id="reset-button" href="">Play Again</a>
+    </div>
 
     <script type="text/template" id="board-template">
       <table id="board">
