--- a/spec/runner.html
+++ b/spec/runner.html
@@ -15,10 +15,12 @@
   <script type="text/javascript" src="../spec/spec_helper.js"></script>
   <script type="text/javascript" src="../spec/board_spec.js"></script>
   <script type="text/javascript" src="../spec/opponent_spec.js"></script>
+  <script type="text/javascript" src="../spec/referee_spec.js"></script>
   <script type="text/javascript" src="../spec/game_spec.js"></script>
 
   <script type="text/javascript" src="../lib/underscore/underscore.js"></script>
   <script type="text/javascript" src="../lib/tictactoe/board.js"></script>
+  <script type="text/javascript" src="../lib/tictactoe/referee.js"></script>
   <script type="text/javascript" src="../lib/tictactoe/opponent.js"></script>
   <script type="text/javascript" src="../lib/tictactoe/game.js"></script>
 
