--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Tic Tac Toe</title>
+    <meta name="author" content="Scott Albertson" />
 
     <script type="text/javascript" src="lib/jquery/jquery.js"></script>
     <script type="text/javascript" src="lib/underscore/underscore.js"></script>
