--- a/spec/runner.html
+++ b/spec/runner.html
@@ -14,14 +14,14 @@
 
   <script type="text/javascript" src="../spec/spec_helper.js"></script>
   <script type="text/javascript" src="../spec/board_spec.js"></script>
-  <script type="text/javascript" src="../spec/opponent_spec.js"></script>
+  <script type="text/javascript" src="../spec/player_spec.js"></script>
   <script type="text/javascript" src="../spec/referee_spec.js"></script>
   <script type="text/javascript" src="../spec/game_spec.js"></script>
 
   <script type="text/javascript" src="../lib/underscore/underscore.js"></script>
   <script type="text/javascript" src="../lib/tictactoe/board.js"></script>
   <script type="text/javascript" src="../lib/tictactoe/referee.js"></script>
-  <script type="text/javascript" src="../lib/tictactoe/opponent.js"></script>
+  <script type="text/javascript" src="../lib/tictactoe/player.js"></script>
   <script type="text/javascript" src="../lib/tictactoe/game.js"></script>
 
   <script type="text/javascript">
